change header fonts

--- a/README.html
+++ b/README.html
@@ -359,7 +359,7 @@ display: none;
 <!-- badges: end --></p>
 <p>This is a repository for <code>Quarto</code> <code>revealjs</code>
 template.</p>
-<p>![]](template.png)](<a href="https://m.canouil.dev/quarto-revealjs-coeos/" class="uri">https://m.canouil.dev/quarto-revealjs-coeos/</a>)</p>
+<p>![]](template.png)]()</p>
 <div id="installation" class="section level2">
 <h2>Installation</h2>
 <p>This <a href="quarto.org">Quarto</a> extension can be installed/used
@@ -370,6 +370,11 @@ using the following command:</p>
 <li><p>Use</p>
 <pre class="bash"><code>quarto use template emmarshall/quarto-revealjs-emw</code></pre></li>
 </ul>
+</div>
+<div id="acknowledgments" class="section level2">
+<h2>Acknowledgments</h2>
+<p>This theme is built on the work of others including this <a href="https://github.com/mcanouil/quarto-revealjs-coeos">Quarto
+reveal.js template</a> and the <a href="https://draculatheme.com/">Dracula</a> theme.</p>
 </div>
 </div>
 
